# SGPRViz

./: CMakeLists.txt  README.md  semantickitti2bag.py
results/00/: poses.json
results/00/100/0/: pr0_4435.json  pr105_1555.json  pr2335_3275.json  pr385_2435.json  pr7_500.json
results/00/100/1/: pr0_4435.json  pr105_1555.json  pr2335_3275.json  pr385_2435.json  pr400_3400.json  pr500_3500.json  pr600_3570.json  pr700_3650.json  pr810_3740.json  pr_no_loop.json
results/00/1000/0/: pr0_4435.json  pr105_1555.json  pr385_2435.json  pr_no_loop.json
results/00/1000/1/: pr0_1050.json  pr0_4435.json  pr105_1555.json  pr385_2435.json  pr_no_loop.json
results/00/500/0/: pr0_4435.json  pr105_1555.json  pr2335_3275.json  pr385_2435.json  pr7_500.json
results/00/500/1/: pr0_4435.json  pr105_1555.json  pr2335_3275.json  pr385_2435.json  pr_no_loop.json
results/02/: poses.json
results/02/100/0/: pr1795_4395.json  pr3335_4575.json  pr7_500.json  pr915_4185.json
results/02/100/1/: pr1795_4395.json  pr3335_4575.json  pr7_500.json  pr915_4185.json
results/02/1000/0/: pr3335_4575.json  pr915_4185.json  pr_no_loop.json
results/02/1000/1/: pr0_1050.json  pr3335_4575.json  pr915_4185.json  pr_no_loop.json
results/02/500/0/: pr1795_4395.json  pr3335_4575.json  pr7_500.json  pr915_4185.json
results/02/500/1/: pr1795_4395.json  pr3335_4575.json  pr915_4185.json  pr_no_loop.json
results/05/: poses.json
results/05/100/0/: pr15_2415.json  pr525_1295.json  pr795_2575.json  pr7_500.json
results/05/100/1/: pr15_2415.json  pr525_1295.json  pr795_2575.json  pr_no_loop.json
results/05/1000/0/: pr15_2415.json  pr795_2575.json  pr_no_loop.json
results/05/1000/1/: pr0_1050.json  pr15_2415.json  pr795_2575.json  pr_no_loop.json
results/05/500/0/: pr705_1405.json
results/06/: poses.json
results/06/100/0/: pr0_830.json  pr555_700.json
results/06/100/1/: pr0_830.json  pr555_700.json
results/06/1000/0/: pr0_840.json  pr100_930.json  pr200_1020.json  pr_no_loop.json
results/06/1000/1/: pr0_0.json  pr0_650.json  pr0_840.json  pr100_930.json  pr200_1020.json  (+1 more)
results/07/: poses.json
results/08/: poses.json
scripts/: get_max.py  pr_SemanticKitti.py  pr_sample_comparison.py
scripts/proofs/: curvature.py  idw.py  mcar.py  rotation.py
src/: find_loop_ranges.cpp  find_loops.cpp  save_ply.cpp
(+49 files in other folders)
